fix z-index issue with initial lit metamask modal and processing overlay

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@ body {
 
 nav {
   opacity: 0.95;
+  z-index: 9;
 }
 
 .links a {
@@ -44,4 +45,8 @@ main {
 }
 .course-img:hover img {
   filter: grayscale(0%);
+}
+
+#lit-connect-modal-container {
+  z-index: 51;
 }
